--- a/less/card.less
+++ b/less/card.less
@@ -1,6 +1,6 @@
 .events-wrap {
 	position: absolute;
-	top: calc(100vh - (84em * 2 / 16));
+	top: calc(100% - (84em * 2 / 16));
 	box-sizing: border-box;
 	width: 100%;
 	height: (84em * 2 / 16);
@@ -53,6 +53,7 @@
 	
 	header {
 		position: relative;
+		margin: 0 1em;
 		padding-top: (12em/16);
 		text-align: center;
 		
@@ -85,8 +86,9 @@
 	}
 }
 
-.active .card {
+.card-wrap.active .card {
 	height: 100%;
-	overflow: scroll;
+	overflow-x: hidde;
+	overflow-y: scroll;
 	-webkit-overflow-scrolling: touch;
 }
