--- a/less/main.less
+++ b/less/main.less
@@ -15,7 +15,7 @@
 	
 	.logo {
 		position: absolute;
-		top: calc(100vh - (84em * 2 / 16) - 72px);
+		top: calc(100% - (84em * 2 / 16) - 72px);
 		left: 50%;
 		margin-left: -64px;
 		display: block;
